Bug 1927211 - Move moz-page-nav secondary buttons to be immediately below primary buttons separated by an hr element and align font/icon size between the two r=desktop-theme-reviewers,reusable-components-reviewers,hjones
Differential Revision: https://phabricator.services.mozilla.com/D228363

--- a/toolkit/content/widgets/moz-page-nav/moz-page-nav-button.css
+++ b/toolkit/content/widgets/moz-page-nav/moz-page-nav-button.css
@@ -4,7 +4,6 @@
 
 :host {
   border-radius: var(--border-radius-small);
-  font-size: var(--font-size-large);
   &:focus-visible {
     outline-offset: var(--page-nav-focus-outline-inset);
   }
@@ -90,19 +89,10 @@ button[selected]:focus-visible {
 }
 
 .page-nav-icon {
-  height: 20px;
-  width: 20px;
+  height: var(--icon-size-default);
+  width: var(--icon-size-default);
   -moz-context-properties: fill;
   fill: currentColor;
-}
-
-:host(.secondary-nav-item) {
-  font-size: var(--font-size-small);
-
-  & .page-nav-icon {
-    height: var(--icon-size-default);
-    width: var(--icon-size-default);
-  }
 }
 
 @media (prefers-contrast) {
